Put a bunch of talks in

--- a/views/homepage/index.jade
+++ b/views/homepage/index.jade
@@ -1,6 +1,6 @@
-:markdown
-  # Felix Geisendörfer
+h1 Felix Geisendörfer
 
+:markdown
   Hi, I run a small consultancy in Berlin called [debuggable][]. We bootstraps
   a web service named [transloadit][].
 
@@ -8,13 +8,13 @@
   [transloadit]: https://transloadit.com/
 
   I am also a long time [node.js][] core contributor, and sometimes available for
-  [consulting][debuggable].
+  [consulting][].
 
   [node.js]: http://nodejs.org/
+  [consulting]: /consulting
 
-  ## Upcoming Talks
-
+h2 Speaking
 ul
-  each talk in upcomingTalks
+  each talk in recentTalks
     li
       include talk
