Enable view cache, fix 0.6.x compat

--- a/views/pages/homepage.jade
+++ b/views/pages/homepage.jade
@@ -14,11 +14,12 @@ block content
     [node.js]: http://nodejs.org/
     [consulting]: /consulting
 
-  h2 Writing
+    ## Writing
 
-  ul
-    each post in recentPosts
-      li
+    So far I've been writing over [here][old-blog], but expect new articles
+    to show up on this site soon.
+
+    [old-blog]: http://debuggable.com/blog
 
   h2 Speaking
 
