Even better copy

--- a/views/pages/speaking.jade
+++ b/views/pages/speaking.jade
@@ -18,7 +18,7 @@ block content
 
     Felix Geisendörfer ([picture][]) is a node.js core developer and has experienced it's
     strength and shortcomings first-hand while building transloadit.com.
-    When not event-looping, he loves [street unicycling][] and watching squirrels.
+    When not event-looping, he loves going [street unicycling][] and watching squirrels.
 
     [picture]: http://felixge.s3.amazonaws.com/11/felix_geisendoerfer.jpg
     [street unicycling]: http://www.youtube.com/results?search_query=street+unicycling
