Change consulting copy

--- a/views/pages/consulting.jade
+++ b/views/pages/consulting.jade
@@ -1,8 +1,8 @@
 extends ../layout
 block content
   :markdown
-    Depending on my availability, I sometimes take on consulting work which
-    consists of:
+    To help bootstraping [transloadit][], I take on a limited amount of
+    consulting work which consists of:
 
     * Advising on the architecture and code base of node.js apps
     * Bringing teams up to speed with node.js and best practices
@@ -11,6 +11,8 @@ block content
 
     Generally speaking, I can help with most problems related to writing and
     running node.js applications.
+
+    [transloadit]: https://transloadit.com/
 
     ## Terms
 
