--- a/views/pages/consulting.jade
+++ b/views/pages/consulting.jade
@@ -1,7 +1,7 @@
 extends ../layout
 block content
   :markdown
-    To help bootstraping [transloadit][], I take on a limited amount of
+    To help bootstrapping [transloadit][], I take on a limited amount of
     consulting work which consists of:
 
     * Advising on the architecture and code base of node.js apps
@@ -23,7 +23,7 @@ block content
 
     If you require me to travel to your location:
 
-    * You are responsible for providing flights & accomodation.
+    * You are responsible for providing flights & accommodation.
     * You need to book at least 5 full days if you are outside of the EU.
 
     ## Booking
