--- a/views/pages/speaking.jade
+++ b/views/pages/speaking.jade
@@ -1,7 +1,7 @@
 extends ../layout
 block content
   :markdown
-    I'm generally very happy to receive invitations to tech conferences or user
+    I'm always very happy to receive invitations to tech conferences or user
     groups, so if you are looking for a speaker to talk about node.js or related
     topics, please get in [touch][email].
 
