Copy can never be perfect, but damn it I try!

--- a/views/pages/speaking.jade
+++ b/views/pages/speaking.jade
@@ -1,9 +1,9 @@
 extends ../layout
 block content
   :markdown
-    I'm always very happy to receive invitations to tech conferences or user
-    groups, so if you are looking for a speaker to talk about node.js or related
-    topics, please get in [touch][email].
+    I enjoy talking at tech conferences or user groups, so if you are
+    looking for a speaker to talk about node.js or related topics,
+    please get in [touch][email].
 
     [email]: mailto:felix@debuggable.com
 
