--- a/views/layout.jade
+++ b/views/layout.jade
@@ -3,6 +3,7 @@ html
   head
     title= title
     link(rel='stylesheet', href='/css/main.css')
+    include analytics
   body
     div(class='container')
       block breadcrumbs
