Change or -> and

--- a/views/pages/speaking.jade
+++ b/views/pages/speaking.jade
@@ -1,7 +1,7 @@
 extends ../layout
 block content
   :markdown
-    I enjoy talking at tech conferences or user groups, so if you are
+    I enjoy talking at tech conferences and user groups, so if you are
     looking for a speaker to talk about node.js or related topics,
     please get in [touch][email].
 
