--- a/public/css/main.less
+++ b/public/css/main.less
@@ -31,3 +31,22 @@ h1 a, h2 a, h3 a, h4 a{
 h1 a:hover, h2 a:hover, h3 a:hover, h4 a:hover{
   text-decoration: underline;
 }
+
+.clear{
+  float: left;
+  clear: both;
+}
+
+.talks{
+  margin: 0 0 0 20px;
+  padding: 0;
+  float: left;
+
+  .talk{
+    float: left;
+    margin-right: 10px;
+    margin-bottom: 10px;
+    display: inline;
+    list-style-type: none;
+  }
+}
