Stop disclosing daily rate
Totally unsure about this

--- a/views/pages/consulting.jade
+++ b/views/pages/consulting.jade
@@ -17,7 +17,7 @@ block content
     ## Terms
 
     * I only work full days in order to maximize my focus on your project.
-    * My current fee is 1000 EUR per day worked (~8 hours).
+    * My current daily fee is available upon request.
 
     ## Travel
 
