--- a/public/css/main.less
+++ b/public/css/main.less
@@ -38,7 +38,7 @@ h1 a:hover, h2 a:hover, h3 a:hover, h4 a:hover{
 }
 
 .talks{
-  margin: 0 0 0 20px;
+  margin: 0 0 20px 20px;
   padding: 0;
   float: left;
 
@@ -48,5 +48,59 @@ h1 a:hover, h2 a:hover, h3 a:hover, h4 a:hover{
     margin-bottom: 10px;
     display: inline;
     list-style-type: none;
+    height: 188px;
+
+    img{
+      display: block;
+      width: 220px;
+      height: 146px;
+      background-color: #ccc;
+    }
+
+    .link:hover img{
+      opacity: .2;
+    }
+
+    .link{
+      text-decoration: none;
+    }
+
+    .name, .title, .date{
+      display: block;
+      position: relative;
+      z-index: 10;
+      height: 22px;
+      line-height: 22px;
+      font-size: 13px;
+      color: #fff;
+    }
+
+    .name{
+      width: 220px;
+      background-color: #000;
+      text-align: center;
+    }
+
+    .title{
+      margin-top: -146px;
+      height: 126px;
+      padding: 10px;
+      width: 200px;
+      color: #000;
+      font-size: 15px;
+      visibility: hidden;
+    }
+
+    .link:hover .title{
+      visibility: visible;
+    }
+
+    .date{
+      color: #000;
+
+      .upcoming{
+        font-weight: bold;
+      }
+    }
   }
 }
