Add some content

--- a/layouts/default.html
+++ b/layouts/default.html
@@ -1,15 +1,17 @@
-<!doctype html>
-<html>
-	<head>
-		<meta charset="UTF-8">
-		<title>felixge.de</title>
+<!doctype html public "✰">
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <title>Title will go here ...</title>
 
-		<link rel="stylesheet" type="text/css" href="/css/main.css" />
-		<script src="/js/main.js"></script>
-	</head>
-	<body>
-		<h1>felixge.de</h1>
-
+  <link rel="stylesheet" media="screen" href="/css/main.css" >
+</head>
+<body>
+  <div class="container">
+    <a id="logo" title="GET ON THE SQUIRREL - THERE'S NO TIME TO EXPLAIN" href="/">
+      <img src="/img/get-on-the-squirrel.png">
+    </a>
 		{{template "page"}}
-	</body>
+  </div>
+</body>
 </html>
