--- a/public/css/main.less
+++ b/public/css/main.less
@@ -2,7 +2,7 @@
 #logo{
   display: block;
   width: 391px;
-  margin: 0 auto;
+  margin: 20px auto;
 
   img{
     height: 250px;
@@ -22,8 +22,7 @@
   }
 
   td{
-
-    a,span{
+    span{
       background-color: #fff;
       bottom: -10px;
       position: relative;
@@ -31,7 +30,7 @@
   }
 
   .title {
-    a{
+    span{
       padding-right: 20px;
     }
   }
@@ -40,13 +39,13 @@
     border-bottom: 2px dotted #ccc;
   }
 
-  .date, .location{
+  .date, .location a{
     color: grey;
   }
 
   .location{
     text-align: right;
-      padding-right: 0;
+		padding-right: 0;
     span{
       padding-left: 20px;
     }
@@ -56,29 +55,6 @@
     text-align: right;
     width: 100px;
   }
-
-
-  /*padding: 0;*/
-
-  /*li{*/
-    /*list-style-type: none;*/
-    /*border-bottom: 2px dotted #ccc;*/
-    /*height: 16px;*/
-    /*clear: both;*/
-    /*margin-bottom: 10px;*/
-  /*}*/
-
-  /*a{*/
-    /*background-color: #fff;*/
-    /*padding: 0 20px 0 0;*/
-  /*}*/
-
-  /*span{*/
-    /*background-color: #fff;*/
-    /*float: right;*/
-    /*padding: 0 0 0 5px;*/
-    /*color: gray;*/
-  /*}*/
 }
 
 /* Generic Styles */
