--- a/layouts/default.html
+++ b/layouts/default.html
@@ -2,7 +2,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <title>Title will go here ...</title>
+  <title>Felix Geisendörfer</title>
 
   <link rel="stylesheet" media="screen" href="/css/main.css" >
 </head>
