--- a/layouts/default.html
+++ b/layouts/default.html
@@ -4,7 +4,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <title>Felix Geisendörfer</title>
 
-  <link rel="stylesheet" media="screen" href="/css/main.css" >
+  <link rel="stylesheet" media="screen" href="/css/main.css?v2" >
 </head>
 <body>
   <div class="container">
@@ -13,5 +13,16 @@
     </a>
     {{template "page" .}}
   </div>
+  <script type="text/javascript">
+    var _gaq = _gaq || [];
+    _gaq.push(['_setAccount', 'UA-3306079-13']);
+    _gaq.push(['_trackPageview']);
+
+    (function() {
+      var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+      ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+      var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+    })();
+  </script>
 </body>
 </html>
