Remove css versioning

--- a/layouts/default.html
+++ b/layouts/default.html
@@ -4,7 +4,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <title>Felix Geisendörfer</title>
 
-  <link rel="stylesheet" media="screen" href="/css/main.css?v2" >
+  <link rel="stylesheet" media="screen" href="/css/main.css" >
 </head>
 <body>
   <div class="container">
