--- a/layouts/default.html
+++ b/layouts/default.html
@@ -5,6 +5,7 @@
   <title>Felix Geisendörfer</title>
 
   <link rel="stylesheet" media="screen" href="/css/main.css" >
+  <link href="posts.atom.xml" type="application/atom+xml" rel="alternate" title="Posts">
 </head>
 <body>
   <div class="container">
