--- a/layouts/default.html
+++ b/layouts/default.html
@@ -2,7 +2,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <title>Felix Geisendörfer</title>
+  <title>{{ .Title }} - Felix Geisendörfer</title>
 
   <link rel="stylesheet" media="screen" href="/css/main.css" >
   <link href="posts.atom.xml" type="application/atom+xml" rel="alternate" title="Posts">
@@ -12,6 +12,7 @@
     <a id="logo" title="GET ON THE SQUIRREL - THERE'S NO TIME TO EXPLAIN" href="/">
       <img src="/img/get-on-the-squirrel.png">
     </a>
+    <h1>{{ .Title }}</h1>
     {{template "page" .}}
   </div>
   <script type="text/javascript">
