--- a/templates/layout.html
+++ b/templates/layout.html
@@ -5,9 +5,19 @@
   <title>{{ .Title }} - Felix Geisendörfer</title>
 
   <link rel="stylesheet" media="screen" href="/css/main.css" >
-  <link href="posts.atom.xml" type="application/atom+xml" rel="alternate" title="Posts">
+  <link href="/posts/atom.xml" type="application/atom+xml" rel="alternate" title="Posts">
 </head>
 <body>
+  <div class="header">
+    <ul>
+      <li><a href="/#about">About</a></li>
+      <li><a href="/#writing">Writing</a></li>
+      <li><a href="/#speaking">Speaking</a></li>
+      <li><a href="/#consulting">Consulting</a></li>
+      <li><a href="/#contact">Contact</a></li>
+    <ul>
+  </div>
+
   <div class="container">
     <a id="logo" title="GET ON THE SQUIRREL - THERE'S NO TIME TO EXPLAIN" href="/">
       <img src="/img/get-on-the-squirrel.png">
