--- a/public/css/main.less
+++ b/public/css/main.less
@@ -117,6 +117,7 @@ a:visited{
 
 h1 a, h2 a, h3 a, h4 a{
   text-decoration: none;
+  color: #333 !important;
 }
 
 h1 a:hover, h2 a:hover, h3 a:hover, h4 a:hover{
