--- a/templates/layout.html
+++ b/templates/layout.html
@@ -10,7 +10,7 @@
 <body>
   <div class="header">
     <ul>
-      <li><a href="/#about">About</a></li>
+      <li><a href="/">About</a></li>
       <li><a href="/#writing">Writing</a></li>
       <li><a href="/#speaking">Speaking</a></li>
       <li><a href="/#consulting">Consulting</a></li>
