--- a/templates/layout.html
+++ b/templates/layout.html
@@ -5,7 +5,7 @@
   <title>{{ .Title }} - Felix Geisendörfer</title>
 
   <link rel="stylesheet" media="screen" href="/css/main.css" >
-  <link href="/posts/atom.xml" type="application/atom+xml" rel="alternate" title="Posts">
+  <link href="http://feeds.feedburner.com/felixge" type="application/rss+xml" rel="alternate" title="Posts">
 </head>
 <body>
   <div class="header">
