--- a/templates/post.html
+++ b/templates/post.html
@@ -6,5 +6,7 @@ Published: {{ longDate .Post.Published }}
 
 <hr>
 
-Subscribe to this blog via <a href="/posts/atom.xml">RSS</a> or <a href="#">E-Mail</a> and get small updates via <a
-  href="https://twitter.com/felixge">Twitter</a>.
+Subscribe to this blog via <a
+  href="http://feeds.feedburner.com/felixge">RSS</a> or <a
+  href="http://feedburner.google.com/fb/a/mailverify?uri=felixge">E-Mail</a>
+and get small updates via <a href="https://twitter.com/felixge">Twitter</a>.
