--- a/templates/post.html
+++ b/templates/post.html
@@ -3,10 +3,11 @@ Published: {{ longDate .Post.Published }}
 {{ .Html }}
 
 -- Felix Geisendörfer
-
 <hr>
 
 Subscribe to this blog via <a
   href="http://feeds.feedburner.com/felixge">RSS</a> or <a
   href="http://feedburner.google.com/fb/a/mailverify?uri=felixge">E-Mail</a>
 and get small updates via <a href="https://twitter.com/felixge">Twitter</a>.
+<br><br>
+Last Update:  {{ longDate .Post.Updated }}
