--- a/public/css/main.less
+++ b/public/css/main.less
@@ -95,6 +95,22 @@
   }
 }
 
+/* Testimonials */
+blockquote{
+  hr{
+    margin-top: 20px;
+  }
+
+  cite{
+    display: block;
+    text-align: right;
+    width: 100%;
+    &:before{
+      content: "-- ";
+    }
+  }
+}
+
 /* Generic Styles */
 
 body{
