--- a/templates/layout.html
+++ b/templates/layout.html
@@ -11,7 +11,7 @@
   <div class="header">
     <ul>
       <li><a href="/">About</a></li>
-      <li><a href="/#writing">Writing</a></li>
+      <li><a href="/#blog">Blog</a></li>
       <li><a href="/#speaking">Speaking</a></li>
       <li><a href="/#consulting">Consulting</a></li>
       <li><a href="/#contact">Contact</a></li>
