--- a/public/css/main.less
+++ b/public/css/main.less
@@ -21,6 +21,9 @@
   background-color: #333;
   line-height: 40px;
   font-size: 18px;
+  position: fixed;
+  top: 0;
+  z-index: 10;
 
   ul{
     padding: 0;
@@ -45,7 +48,7 @@
 .container{
   width: 960-120px;
   padding: 20px 60px;
-  margin: 20px auto;
+  margin: 60px auto;
   background-color: #fff;
   border: 1px solid #C1C1C1;
   .box-shadow(1px 1px 1px, #ccc)
