--- a/templates/post.html
+++ b/templates/post.html
@@ -8,7 +8,7 @@ Published: {{ longDate .Post.Published }}
 Subscribe to this blog via <a
   href="http://feeds.feedburner.com/felixge">RSS</a> or <a
   href="http://feedburner.google.com/fb/a/mailverify?uri=felixge">E-Mail</a>
-and or get small updates from me via <a href="https://twitter.com/felixge">Twitter</a>.
+or get small updates from me via <a href="https://twitter.com/felixge">Twitter</a>.
 <br><br>
 Last Update:  {{ longDate .Post.Updated }}
 <br>
