--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,6 +1,10 @@
-Published: {{ longDate .Post.Published }}
+---
+layout: default
+---
 
-{{ .Html }}
+Published: {{ page.date | date: "%b %e, %Y at %H:%M %Z" }}
+
+{{ content }}
 
 -- Felix Geisendörfer
 <hr/>
@@ -10,7 +14,7 @@ Subscribe to this blog via <a
   href="http://feedburner.google.com/fb/a/mailverify?uri=felixge">E-Mail</a>
 or get small updates from me via <a href="https://twitter.com/felixge">Twitter</a>.
 <br><br>
-Last Update:  {{ longDate .Post.Updated }}
+Last Update:  {{ page.updated | date: "%b %e, %Y at %H:%M %Z" }}
 <br>
 <br>
 
@@ -18,8 +22,8 @@ Last Update:  {{ longDate .Post.Updated }}
 <script type="text/javascript">
     /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
     var disqus_shortname = 'felixge'; // required: replace example with your forum shortname
-    var disqus_url = {{ print .BaseUrl .Post.Url }};
-    var disqus_title = {{ .Post.Title }};
+    var disqus_url = "{{ site.url }}{{ page.url }}";
+    var disqus_title = "{{ page.title }}";
 
     /* * * DON'T EDIT BELOW THIS LINE * * */
     (function() {
