--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,6 +14,7 @@
       <li><a href="/#blog">Blog</a></li>
       <li><a href="/#speaking">Speaking</a></li>
       <li><a href="/#consulting">Consulting</a></li>
+      <li><a href="/#personal">Personal</a></li>
       <li><a href="/#contact">Contact</a></li>
     <ul>
   </div>
