--- a/css/main.less
+++ b/css/main.less
@@ -21,6 +21,9 @@
   background-color: #333;
   line-height: 40px;
   font-size: 18px;
+  position: fixed;
+  top: 0;
+  z-index: 99999;
 
   ul{
     padding: 0;
@@ -145,6 +148,8 @@ h1{
 }
 
 h2{
+  margin-top: -60px;
+  padding-top: 60px;
   font-size: 20px;
 }
 
