--- a/css/main.less
+++ b/css/main.less
@@ -114,6 +114,15 @@ blockquote{
   }
 }
 
+/* Code */
+
+.highlight pre{
+  background-color: #333;
+  color: #eee;
+  padding: 10px;
+  overflow: scroll;
+}
+
 /* Generic Styles */
 
 body{
