adding SubToMe buttons

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,7 +9,7 @@ Published: {{ page.date | date: "%b %e, %Y at %H:%M %Z" }}
 -- Felix Geisendörfer
 <hr/>
 
-Subscribe to this blog via <a
+<input type="button" onclick="(function(){var z=document.createElement('script');z.src='https://www.subtome.com/load.js';document.body.appendChild(z);})()" value="Subscribe"> to this blog via <a
   href="http://feeds.feedburner.com/felixge">RSS</a> or <a
   href="http://feedburner.google.com/fb/a/mailverify?uri=felixge">E-Mail</a>
 or get small updates from me via <a href="https://twitter.com/felixge">Twitter</a>.
