--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,6 +5,7 @@
   <title>{{ page.title }} - {{ site.title }}</title>
 
   <link rel="stylesheet" media="screen" href="/css/main.css" >
+  <link rel="stylesheet" media="screen" href="/css/syntax.css" >
   <link href="http://feeds.feedburner.com/felixge" type="application/rss+xml" rel="alternate" title="Posts">
 </head>
 <body>
