fix disqus identifier

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -27,7 +27,7 @@ Last Update:  {{ page.updated | date: "%b %e, %Y at %H:%M %Z" }}
      */
     var disqus_config = function () {
         this.page.url = 'http://felixge.de{{ page.url }}';  // Replace PAGE_URL with your page's canonical URL variable
-        this.page.identifier = 'felixge'; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+        this.page.identifier = '{{ page.url }}'; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
     };
     (function() {  // REQUIRED CONFIGURATION VARIABLE: EDIT THE SHORTNAME BELOW
         var d = document, s = d.createElement('script');
