use https for feedburner

--- a/themes/felixge/layouts/_default/single.html
+++ b/themes/felixge/layouts/_default/single.html
@@ -7,7 +7,7 @@ Published: <time datetime="{{ .Date.Format "2006-01-02T15:04:05Z0700" }}">{{ .Da
 -- Felix Geisendörfer
 <hr/>
 
-Subscribe to this blog via <a href="http://feeds.feedburner.com/{{ .Site.Params.feedburnerShortname }}">RSS</a> or <a href="http://feedburner.google.com/fb/a/mailverify?uri={{ .Site.Params.feedburnerShortname }}">E-Mail</a> or get small updates from me via <a href="https://twitter.com/{{ .Site.Params.twitterShortname }}">Twitter</a>.
+Subscribe to this blog via <a href="https://feeds.feedburner.com/{{ .Site.Params.feedburnerShortname }}">RSS</a> or <a href="https://feedburner.google.com/fb/a/mailverify?uri={{ .Site.Params.feedburnerShortname }}">E-Mail</a> or get small updates from me via <a href="https://twitter.com/{{ .Site.Params.twitterShortname }}">Twitter</a>.
 <br><br>
 
 {{- partial "disqus.html" . -}}
