--- a/themes/felixge/layouts/index.html
+++ b/themes/felixge/layouts/index.html
@@ -5,7 +5,7 @@
 <h2 id="blog"><a href="#blog">Blog</a></h2>
 
 <p>
-  You can subscribe to updates via <a href="http://feeds.feedburner.com/{{ .Site.Params.feedburnerShortname }}">RSS</a> or <a href="http://feedburner.google.com/fb/a/mailverify?uri={{ .Site.Params.feedburnerShortname }}">E-Mail</a>.
+  You can subscribe to updates via <a href="https://feeds.feedburner.com/{{ .Site.Params.feedburnerShortname }}">RSS</a> or <a href="https://feedburner.google.com/fb/a/mailverify?uri={{ .Site.Params.feedburnerShortname }}">E-Mail</a>.
 </p>
 
 {{- $pages := where .Site.RegularPages "Type" "in" .Site.Params.MainSections -}}
