Improve code highlight style

--- a/themes/felixge/assets/sass/main.scss
+++ b/themes/felixge/assets/sass/main.scss
@@ -116,14 +116,16 @@ blockquote{
 
 /* Code */
 .highlight { 
-  background-color: #efefef;
-  padding: 7px 7px 7px 10px;
-  border: 1px solid #ddd;
-  -moz-box-shadow: 3px 3px rgba(0,0,0,0.1);
-  -webkit-box-shadow: 3px 3px rgba(0,0,0,0.1);
-  box-shadow: 3px 3px rgba(0,0,0,0.1);
+  background-color: #f7f7f7;
+  padding: 10px 7px 10px 10px;
+  border: 1px solid #ccc;
   margin: 20px 0 20px 0;
   overflow: auto;
+  border-radius: 3px;
+
+  pre {
+    margin: 0;
+  }
 }
 
 /* Generic Styles */
